--- a/chooseyourbrowser.html
+++ b/chooseyourbrowser.html
@@ -47,6 +47,7 @@
     Color Browser <a href="colorsearch.html" target="_blank">Go to browser</a>
     <br>
     Gaming Browser 2.0. <a href="hello_for_2.0.html" target="_blank">Go to browser</a>
+    Groups <a href="group.html" target="_blank">Go to groups</a>
     </p>
     <footer>
         <p>Version 7.0. Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coder Benson</p>
